--- a/style.less
+++ b/style.less
@@ -171,6 +171,7 @@ body {
                         display: block;
                         color: @white;
                         text-decoration: none;
+                        cursor: pointer;
                     }
                 }
             }
